# rust-mcp-azure

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  SECURITY.md  azure.yaml  project-prompt.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
docs/: architecture.md  architecture.mmd  deployment.md  open-questions.md  roadmap.md  template-acceptance.md  tool-contracts.md  vision.md
docs/adr/: 0001-azd-template-positioning.md  0002-http-sse-public-surface.md  0003-zero-trust-read-only-v1.md  0004-select-axum.md  0005-authorization-bearer-api-key.md  0006-safe-system-metrics-allowlist.md  0007-coordinate-grid-contract.md  0008-defer-acr.md  0009-defer-schema-versioning.md  README.md
infra/: main.bicep  main.parameters.json
scripts/: smoke-test.sh
src/: config.rs  error.rs  http.rs  main.rs  util.rs
src/tools/: grid.rs  metrics.rs  mod.rs
