[package]
name = "rust-mcp-azure"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8", features = ["json"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "serde", "std"] }
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["fs", "macros", "net", "process", "rt-multi-thread", "time"] }
tower-http = { version = "0.6", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }